[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.1"
winit_input_helper = "0.12.0"
bevy = {git = "https://github.com/a-llie/bevy.git", branch = "personal"}
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
select = "0.5.0"
open = "1.7.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
